fix navbar width to not overlap behind the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 }
 
 .navbar {
-  @apply flex justify-between w-screen bg-[rgb(17_17_17_/_0.75)] fixed;
+  @apply flex justify-between w-full bg-[rgb(17_17_17_/_0.75)] fixed;
 }
 
 .left-section {
@@ -67,6 +67,10 @@
 
 .news-section {
   @apply h-screen bg-[url(/news-bg.png)];
+}
+
+.news-header {
+  @apply flex justify-center;
 }
 
 /* Region section */
